--- a/README
+++ b/README
@@ -1,2 +1,63 @@
+<p align="center">
+<img src="https://github.com/user-attachments/assets/af79f477-189c-44cf-9fd0-52afc52e0fa1"/>
+<p align="center">
+<img loading="lazy" src="http://img.shields.io/static/v1?label=STATUS&message=ABERTO%20PARA%20DESENVOLVIMENTO&color=GREEN&style=for-the-badge" alt="" style="max-width: 100%;"/>
+</p>
+
+### Tópicos 
+
+- [Descrição do projeto](#descrição-do-projeto)
+
+- [Funcionalidades](#funcionalidades)
+
+- [Ferramentas utilizadas](#ferramentas-utilizadas)
+
+- [Técnicas e Tecnologias Utilizadas](#técnicas-e-tecnologias-utilizadas)
+
+- [Acesso ao projeto](#acesso-ao-projeto)
+
+## Descrição do projeto 
+
+<p align="justify">
+ Este projeto simula o backend de uma organização que realiza adoções de animais de estimação. As rotas nela incluem criar adotantes, animais e abrigos, traçando uma relação entre cada entidade, como o tipo de animal adotado por um adotante, por exemplo.
+</p>
+
+## Funcionalidades
+
+:heavy_check_mark: `Funcionalidade 1:` CRUD na API
+
+:heavy_check_mark: `Funcionalidade 2:` Armazena os dados no SQLite por meio do TypeORM;
+
+:heavy_check_mark: `Funcionalidade 3:` Executa validações por meio de Middlewares;
+
+:heavy_check_mark: `Funcionalidade 4:` Criptografia de senha;
+
+
+## Ferramentas utilizadas
+[![My Skills](https://skillicons.dev/icons?i=nodejs,ts,express,sqlite,orm)](https://skillicons.dev)
+
+###
+
+## ✔️ Técnicas e Tecnologias Utilizadas
+
+As principais técnicas e tecnologias abordadas são:
+
+- `NodeJS`: permite executar código JavaScript no lado do servidor;
+- `TypeORM`: ORM permite trabalhar com bancos de dados relacionais de forma orientada a objetos.
+- `Express`: framework de aplicativo web para Node.js que simplifica a criação de aplicativos web e móveis;
+- `Yup`:  para definir regras de validação para estruturas e tipos de dados em aplicativos.
+- `SQLite`: biblioteca compacta que implementa um banco de dados SQL sem a necessidade de um servidor.
+
+
+## Acesso ao projeto
+  - ``git clone https://github.com/BrenonSAraujo/adopet.git``: Clone o projeto do GitHub para a sua máquina
+  
+  - ``npm i``: Instale as dependências do projeto
+  
+  - ``npm run start``: inicie o servidor da aplicação
+    
+
+
+
 Node v18.18.0
 Sequelize 6
